--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.facebook.android:facebook-android-sdk:4.19.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.intuit.ssp:ssp-android:1.0.4'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
