--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,13 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.19.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    compile 'io.reactivex:rxjava:1.3.0'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.intuit.ssp:ssp-android:1.0.4'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
     testCompile 'junit:junit:4.12'
