--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -54,7 +55,7 @@
         <activity
             android:name=".EditProfileActivity"
             android:screenOrientation="portrait" />
-
+        <activity android:name=".AddCauseActivity"></activity>
     </application>
 
 </manifest>
