Auth All Done without facebook login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.amr.sunbula">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -56,7 +56,9 @@
         <activity
             android:name=".EditProfileActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".AddCauseActivity"></activity>
+        <activity
+            android:name=".AddCauseActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
