--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.intuit.ssp:ssp-android:1.0.4'
-    compile 'com.intuit.sdp:sdp-android:1.0.4'
+    compile 'com.github.hantrungkien:AutoDimension:1.0.1'
     testCompile 'junit:junit:4.12'
 }
