sebt el edit 34an lma yzbto 7war el category id

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
         <activity
             android:name=".AddCauseActivity"
             android:label="@string/title_activity_add_cause"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".EditCauseActivity"
+            android:label="@string/title_activity_edit_cause"
             android:theme="@style/AppTheme"></activity>
     </application>
 
