3mlt el design bta3 el user_details lma ykon 3ml search 3alh fel search people

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,8 @@
         <activity
             android:name=".EditCauseActivity"
             android:label="@string/title_activity_edit_cause"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".ShowDetailsUserActivity"></activity>
     </application>
 
 </manifest>
