--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,16 +59,22 @@
         <activity
             android:name=".ChatActivity"
             android:label="@string/title_activity_chat"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".AddCauseActivity"
             android:label="@string/title_activity_add_cause"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".EditCauseActivity"
             android:label="@string/title_activity_edit_cause"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ShowDetailsUserActivity"></activity>
+        <activity
+            android:name=".ShowDetailsUserActivity"
+            android:label=""
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
