3mlt el show causes in categories mn 3'er ma a cache lel categories w el causes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,7 @@
             android:name=".ShowDetailsUserActivity"
             android:label=""
             android:screenOrientation="portrait" />
+        <activity android:name=".CausesInOneCategoryActivity"></activity>
     </application>
 
 </manifest>
