3mlt el activity ele feha el reviews w el following w el followers w lesa h3mlha bokra

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,8 @@
             android:name=".ShowDetailsUserActivity"
             android:label=""
             android:screenOrientation="portrait" />
-        <activity android:name=".CausesInOneCategoryActivity"></activity>
+        <activity android:name=".CausesInOneCategoryActivity" />
+        <activity android:name=".Reviews_Following_FollowersActivity"></activity>
     </application>
 
 </manifest>
