--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
+        android:name=".DBFlow.DBFlowApplication"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashActivity"
+            android:name=".Activities.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,56 +31,56 @@
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:name=".LoginActivity"
+            android:name=".Activities.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ResetPasswordActivity"
+            android:name=".Activities.ResetPasswordActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ConfirmEmailActivity"
+            android:name=".Activities.ConfirmEmailActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ChangePasswordActivity"
+            android:name=".Activities.ChangePasswordActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".Activities.RegisterActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".Activities.HomeActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".SearchCauses_People"
+            android:name=".Activities.SearchCauses_People"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ListCategoriesActivity"
+            android:name=".Activities.ListCategoriesActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".EditProfileActivity"
+            android:name=".Activities.EditProfileActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ChatActivity"
+            android:name=".Activities.ChatActivity"
             android:label="@string/title_activity_chat"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".AddCauseActivity"
+            android:name=".Activities.AddCauseActivity"
             android:label="@string/title_activity_add_cause"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".EditCauseActivity"
+            android:name=".Activities.EditCauseActivity"
             android:label="@string/title_activity_edit_cause"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".ShowDetailsUserActivity"
+            android:name=".Activities.ShowDetailsUserActivity"
             android:label=""
             android:screenOrientation="portrait" />
         <activity
-            android:name=".CausesInOneCategoryActivity"
+            android:name=".Activities.CausesInOneCategoryActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Reviews_Following_FollowersActivity"
+            android:name=".Activities.Reviews_Following_FollowersActivity"
             android:screenOrientation="portrait" />
     </application>
 
