--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,8 +47,9 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.hantrungkien:AutoDimension:1.0.1'
     compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-crash:10.0.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
