show categories as dialog to select one to filter cases on one select it in search as a case

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,10 +95,10 @@
             android:screenOrientation="portrait" />
         <activity android:name=".Activities.DetailsCauseActivity" />
         <activity
-            android:name=".MakeReviewActivity"
+            android:name=".Activities.MakeReviewActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MakeReportActivity"
+            android:name=".Activities.MakeReportActivity"
             android:screenOrientation="portrait" />
     </application>
 
